add chain3 call

--- a/client/main.html
+++ b/client/main.html
@@ -5,11 +5,12 @@
 <body>
   <h1>Welcome to Meteor!</h1>
 
-  {{> hello}}
-  {{> info}}
+  <!-- {{> SubChainProtolAddrPool}} -->
+  <!-- {{> hello}}
+  {{> info}} -->
 </body>
 
-<template name="hello">
+<!-- <template name="hello">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
@@ -23,3 +24,7 @@
     <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
   </ul>
 </template>
+
+<template name="subChainProtocol">
+
+</template> -->
