Revert "add chain3 call"
This reverts commit 4230b9ab6c3ba6bc4002f61436361ce39d686e18.

--- a/client/main.html
+++ b/client/main.html
@@ -5,12 +5,11 @@
 <body>
   <h1>Welcome to Meteor!</h1>
 
-  <!-- {{> SubChainProtolAddrPool}} -->
-  <!-- {{> hello}}
-  {{> info}} -->
+  {{> hello}}
+  {{> info}}
 </body>
 
-<!-- <template name="hello">
+<template name="hello">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
@@ -24,7 +23,3 @@
     <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
   </ul>
 </template>
-
-<template name="subChainProtocol">
-
-</template> -->
