--- a/client/main.html
+++ b/client/main.html
@@ -1,30 +1,16 @@
-<head>
-  <title>moacnodes</title>
-</head>
+<template name="home">
+  <head>
+    <title>moacnodes</title>
+  </head>
 
-<body>
-  <h1>Welcome to Meteor!</h1>
-
-  <!-- {{> SubChainProtolAddrPool}} -->
-  <!-- {{> hello}}
-  {{> info}} -->
-</body>
-
-<!-- <template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+  <body>
+    <h1>Vnode Proxy Pool</h1>
+    {{> VnodeIPAddrPool}}
+    <br><br>
+    <h1>Sub Chain Protocol Pool</h1>
+    {{> SubChainProtocolAddrPool}}
+    <br><br>
+    <h1>Vnode Protocol Base Pool</h1>
+    {{> VnodeProtocolBaseAddrPool}}
+  </body>
 </template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
-</template>
-
-<template name="subChainProtocol">
-
-</template> -->
