Add title to the page

--- a/client/main.html
+++ b/client/main.html
@@ -4,13 +4,18 @@
   </head>
 
   <body>
-    <h1>Vnode Proxy Pool</h1>
-    {{> VnodeIPAddrPool}}
-    <br><br>
-    <h1>Sub Chain Protocol Pool</h1>
-    {{> SubChainProtocolAddrPool}}
-    <br><br>
-    <h1>Vnode Protocol Base Pool</h1>
-    {{> VnodeProtocolBaseAddrPool}}
+    <div class="header ca">
+      <a href="/" class="pa icon icon-logo2" style="margin-top:25px;"></a>
+    </div>
+    <div class="contents">
+      <h1>Vnode Proxy Pool</h1>
+      {{> VnodeIPAddrPool}}
+      <br><br>
+      <h1>Sub Chain Protocol Pool</h1>
+      {{> SubChainProtocolAddrPool}}
+      <br><br>
+      <h1>Vnode Protocol Base Pool</h1>
+      {{> VnodeProtocolBaseAddrPool}}
+    </div>
   </body>
 </template>
