Add subject title.

--- a/client/main.html
+++ b/client/main.html
@@ -6,6 +6,7 @@
   <body>
     <div class="header ca">
       <a href="/" class="pa icon icon-logo2" style="margin-top:25px;"></a>
+      <div class="title">Nodes info</div>
     </div>
     <div class="contents">
       <h1>Vnode Proxy Pool</h1>
