--- a/client/main.html
+++ b/client/main.html
@@ -9,13 +9,13 @@
       <div class="title">Nodes info</div>
     </div>
     <div class="contents">
-      <h1>Vnode Proxy Pool</h1>
+      <h1>Vnode Proxy Nodes Pool</h1>
       {{> VnodeIPAddrPool}}
       <br><br>
       <h1>Sub Chain Protocol Pool</h1>
       {{> SubChainProtocolAddrPool}}
       <br><br>
-      <h1>Vnode Protocol Base Pool</h1>
+      <h1>Vnode Protocol Pool</h1>
       {{> VnodeProtocolBaseAddrPool}}
     </div>
   </body>
