change name Vnode Proxy Nodes Pool to List

--- a/client/main.html
+++ b/client/main.html
@@ -9,7 +9,7 @@
       <div class="title">Nodes info</div>
     </div>
     <div class="contents">
-      <h1>Vnode Proxy Nodes Pool</h1>
+      <h1>Vnode Proxy Nodes List</h1>
       {{> VnodeIPAddrPool}}
       <br><br>
       <h1>Sub Chain Protocol Pool</h1>
