change Sub Chain to Micro Chain

--- a/client/main.html
+++ b/client/main.html
@@ -12,7 +12,7 @@
       <h1>Vnode Proxy Nodes List</h1>
       {{> VnodeIPAddrPool}}
       <br><br>
-      <h1>Sub Chain Protocol Pool</h1>
+      <h1>Micro Chain Protocol Pool</h1>
       {{> SubChainProtocolAddrPool}}
       <br><br>
       <h1>Vnode Protocol Pool</h1>
