--- a/client/main.html
+++ b/client/main.html
@@ -6,13 +6,13 @@
   <body>
     <div class="header ca">
       <a href="/" class="pa icon icon-logo2" style="margin-top:25px;"></a>
-      <div class="title">Nodes info</div>
+      <div class="title">Nodes info -- {{getNetworkName}}</div>
     </div>
     <div class="contents">
       <h1>Vnode Proxy Nodes List</h1>
       {{> VnodeIPAddrPool}}
       <br><br>
-      <h1>Micro Chain Protocol Pool</h1>
+      <h1>MicroChain Protocol Pool</h1>
       {{> SubChainProtocolAddrPool}}
       <br><br>
       <h1>Vnode Protocol Pool</h1>
