--- a/client/main.html
+++ b/client/main.html
@@ -9,9 +9,9 @@
       <div class="title">Nodes info -- {{getNetworkName}}</div>
     </div>
     <div class="contents">
-      <h1>Vnode Proxy Nodes List</h1>
+      <!-- <h1>Vnode Proxy Nodes List</h1>
       {{> VnodeIPAddrPool}}
-      <br><br>
+      <br><br> -->
       <h1>MicroChain Protocol Pool</h1>
       {{> SubChainProtocolAddrPool}}
       <br><br>
