--- a/client/main.html
+++ b/client/main.html
@@ -1,8 +1,10 @@
-<template name="home">
-  <head>
-    <title>moacnodes</title>
-  </head>
+<head>
+  <title>MOAC Nodes Info</title>
+  <link rel="icon" type="image/png" href="/logo.png" />
+</head>
 
+
+<template name="home">
   <body>
     <div class="header ca">
       <a href="/" class="pa icon icon-logo2" style="margin-top:25px;"></a>
